# spectacles-rs

./: .env  .gitignore  Cargo.toml  LICENSE.md  README.md  azure-pipelines.yml  azure-template-win.yml  azure-template.yml
broker/: Cargo.toml
broker/src/: amqp.rs  errors.rs  lib.rs
brokers/: Cargo.toml  README.md
brokers/examples/: amqp_consumer.rs  amqp_producer.rs
brokers/src/: amqp.rs  errors.rs  lib.rs
cache/: Cargo.toml  README.md
cache/src/: errors.rs  lib.rs  prelude.rs
cache/src/backends/: mod.rs  redis_async.rs  redis_sync.rs
cache/src/structures/: channels.rs  emojis.rs  guilds.rs  members.rs  mod.rs  presences.rs  roles.rs  users.rs  voice_states.rs
client/: Cargo.toml  README.md
client/src/: argv.rs  errors.rs  main.rs  sharder.rs
client/src/ratelimiter/: bucket.rs  mod.rs  server.rs
gateway/: Cargo.toml  README.md
gateway/examples/: basic.rs  sharder.rs
gateway/src/: client.rs  cluster.rs  constants.rs  errors.rs  event.rs  lib.rs  manager.rs  queue.rs  shard.rs
models/: Cargo.toml  README.md
models/src/: channel.rs  gateway.rs  invite.rs  lib.rs  permissions.rs  presence.rs  snowflake.rs  user.rs  voice.rs
models/src/guild/: audit_log.rs  member.rs  mod.rs  role.rs
models/src/message/: embed.rs  emoji.rs  mod.rs  webhook.rs
proxy/: Cargo.toml
proxy/src/: lib.rs
rest/: Cargo.toml  README.md
rest/examples/: restbasic.rs
rest/src/: bucket.rs  constants.rs  errors.rs  lib.rs  ratelimit.rs
rest/src/routes/: channel.rs  emoji.rs  guild.rs  mod.rs  user.rs
rest/src/views/: channel.rs  guild.rs  mod.rs  user.rs  webhook.rs
src/: errors.rs  lib.rs
src/broker/: mod.rs
