[package]
name = "spectacles"
description = "A distributed Discord wrapper written in Rust."
keywords = ["discord"]
version = "0.1.0"
authors = ["Rich Rancy <richrancy@gmail.com>"]
edition = "2018"

[dependencies]
lapin-futures = "0.17.0"
tokio = "0.1.15"
futures = "0.1.25"
reqwest = "0.9.10"
failure = "0.1.5"