[package]
name = "spectacles-brokers"
description = "Message brokers which allow for powerful communication between Spectacles services."
documentation = "https://docs.rs/spectacles-brokers/"
version = "1.1.4"
keywords = ["discord", "spec"]
readme = "README.md"
license = "MIT"
authors = ["Texlo-Dev <richrancy@gmail.com>"]
repository = "https://github.com/spec-tacles/spectacles-rs"
edition = "2018"

[lib]
name = "spectacles_brokers"

[dependencies]
lapin-futures = "0.17.0"
tokio = "0.1.15"
futures = "0.1.25"
futures-backoff = "0.1"
failure = "0.1.5"
futures-retry = "0.3.0"
log = "0.4.6"