[package]
name = "spectacles-cache"
description = "Helper utilites for caching Discord objects."
version = "0.1.0"
authors = ["Texlo-Dev <richrancy@gmail.com>"]
edition = "2018"

[lib]
name = "spectacles_cache"

[dependencies]
spectacles-model = "0.1.93"
hashbrown = "0.1.8"
log = "0.4.6"
redis = "0.10.0"
serde = "1.0.89"
serde_json = "1.0.39"
tokio = "0.1.17"
futures = "0.1.25"
mongodb = "0.3.12"