[package]
name = "spectacles"
description = "A Discord library that simplifies the process of writing distributed Discord applications and services."
readme = "README.md"
keywords = ["discord", "distributed"]
authors = ["Texlo-Dev <richrancy@gmail.com>"]
repository = "https://github.com/spec-tacles/spectacles-rs"
version = "0.3.0"
edition = "2018"
license = "MIT"

[dependencies]
serde = "1.0.89"
serde_json = "1.0.39"
serde_derive = "1.0.89"
chrono = "0.4.6"
hashbrown = "0.2.0"
parking_lot = "0.7.1"
regex = "1.1.5"
hyper-reverse-proxy = { git = "https://github.com/spec-tacles/hyper-reverse-proxy" }
hyper = "0.12.25"
clap = "2.32.0"
toml = "0.4.10"
tokio = "0.1.16"
pretty_env_logger = "0.3.0"
log = "0.4.6"
kankyo = "0.2.0"
futures = "0.1.25"
spectacles-gateway = { path = "../gateway", version = "0.2.0" }
spectacles-brokers = { path = "../brokers" }
spectacles-model = { path = "../models", version = "0.1.3" }
