[package]
name = "spectacles-gateway"
description = "A distributed Discord gateway interface for Spectacles."
readme = "README.md"
license = "MIT"
version = "0.2.4"
keywords = ["discord"]
authors = ["Texlo-Dev <richrancy@gmail.com>"]
repository = "https://github.com/spec-tacles/spectacles-rs"
edition = "2018"

[lib]
name = "spectacles_gateway"

[dependencies]
tokio-tungstenite = { version = "0.6.0", features = ["tls", "connect"]}
reqwest = "0.9.10"
parking_lot = "0.7.1"
hashbrown = "0.1.8"
serde = "1.0.88"
serde_derive = "1.0.89"
futures = "0.1.25"
tokio = { version = "0.1.15", features = ["async-await-preview"]}
tokio-fs = "0.1.6"
tokio-sync = "0.1.3"
tokio-dns-unofficial = "0.4.0"
native-tls = "0.2.2"
tokio-tls = "0.2.1"
url = "1.7.2"
serde_json = "1.0.38"
log = "0.4.6"
spectacles-model = { path = "../models", version = "0.1.3" }