[package]
name = "spectacles-model"
description = "Discord types and structures for Spectacles.rs."
repository = "https://github.com/spec-tacles/spectacles-rs"
version = "0.1.1"
authors = ["Texlo-Dev <richrancy@gmail.com>"]
edition = "2018"

[lib]
name = "spectacles_model"
[dependencies]
serde = "1.0.88"
serde_derive = "1.0.89"
chrono = { version = "0.4.6", features = ["serde"] }
serde_json = "1.0.38"
