[package]
name = "spectacles-model"
description = "Discord types and structures for Spectacles.rs."
repository = "https://github.com/spec-tacles/spectacles-rs"
version = "0.1.2"
authors = ["Texlo-Dev <richrancy@gmail.com>"]
edition = "2018"

[lib]
name = "spectacles_model"
[dependencies]
serde = "1.0.88"
serde_derive = "1.0.89"
serde-value = "0.5.3"
serde_eetf = "0.1.0"
chrono = { version = "0.4.6", features = ["serde"] }
serde_repr = "0.1"