[package]
name = "spectacles-proxy"
version = "0.4.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>", "Felipe Noronha <felipenoris@gmail.com>"]
license = "Apache-2.0"
description = "A simple reverse proxy, to be used with Hyper and Tokio."
homepage = "https://github.com/felipenoris/hyper-reverse-proxy"
documentation = "https://docs.rs/hyper-reverse-proxy"
repository = "https://github.com/felipenoris/hyper-reverse-proxy"
keywords = ["http", "hyper"]
categories = ["network-programming", "web-programming"]
edition = "2018"

[dependencies]
hyper = "0.12"
native-tls = "0.2"
tokio = "0.1.16"
tokio-tls = "0.2"
futures = "0.1"
lazy_static = "1.3"
unicase = "2.3"