[package]
name = "spectacles-rest"
description = "A Spectacles REST client for Rust."
license = "MIT"
repository = "https://github.com/spec-tacles/spectacles-rs"
version = "0.1.0"
authors = ["Texlo-Dev <richrancy@gmail.com>"]
edition = "2018"

[lib]
name = "spectacles_rest"

[dependencies]
reqwest = "0.9.10"
serde = "1.0.88"
regex = "1.1.5"
log = "0.4.6"
env_logger = "0.6.1"
serde_derive = "1.0.90"
lazy_static = "1.3.0"
chrono = "0.4.6"
serde_json = "1.0.38"
futures = "0.1.25"
tokio = { version = "0.1.16", features = ["async-await-preview"]}
http = "0.1.16"
parking_lot = "0.7.1"
hashbrown = "0.2.0"
spectacles-model = { path = "../models", version = "0.1.3" }